--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -11,7 +11,7 @@ $selectionColor: lighten($accent, 30%)
 
 $textColor: #666
 $headlineColor: #333
-$bgcolor: #e5eaee
+$bgcolor: #f148a6
 $documentBackgroundColor: #fff
 
 @import '1-tools/-tools-dir'
