--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -12,7 +12,8 @@ $selectionColor: lighten($accent, 30%)
 $textColor: #666
 $headlineColor: #333
 $bgcolor: #f148a6
-$documentBackgroundColor: #fff
+$documentBackgroundColor: #f148a6
+//$documentBackgroundColor:#fff
 
 @import '1-tools/-tools-dir'
 @import '2-base/-base-dir'
